--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.3" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
   </ItemGroup>
 
